# BioCosmos

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile.frontend  README.md  docker-compose.yml  next.config.ts  package-lock.json  package.json  tailwind.config.ts
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/configs/: config.py  config.yaml
backend/app/database/: chroma.py  duckdb.py  lance.py  model.py
backend/app/query/: agent_query.py  db_search.py  image_files.py  image_search.py  images.py  precomputed_similarity.py  species_similarity.py  specimen_data.py  taxon.py  taxon_data.py
backend/app/routers/: agent_search.py  data_stats.py  db_search.py  image_retrieval.py  image_search.py  images.py  ml_search.py  species_data.py  taxon_data.py  taxon_fetch.py  taxon_search.py  text_search.py  text_summarization.py
backend/app/search/: query.py
backend/app/searches/: images.py  species.py  taxon.py
backend/app/services/: agent.py  agent_search.py  chroma.py  chroma_service.py  clip.py  embedder.py  (+12 more)
backend/chroma_db/: chroma.sqlite3
backend/scripts/: precompute_similarity.py
backend/services/: pyproject.toml
backend/tests/: conftest.py  test_api_calls.py  test_config.py  test_db_search.py  test_gbif.py  test_gbif_calls.py  test_image_files.py  test_image_persist.py  test_image_search.py  test_precomputed_similarity.py  test_species_data_router.py  test_species_similarity.py  test_taxon_serach.py  test_text_search.py
backend/tsne_outputs/: unicom_tsne_coords.pkl
backend/unicom/: vision_transformer.py
(+169 files in other folders)
