[project]
name = "backend"
version = "0.1.0"
description = "Backend service for image classification"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=0.6.3",
    "fastapi[standard]>=0.115.12",
    "pillow>=11.2.1",
    "pydantic>=2.11.7",
    "timm>=1.0.15",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers>=4.52.4",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = ["pytest>=8.4.1", "ruff>=0.12.0"]
