[project]
name = "backend"
version = "0.1.0"
description = "Backend service for image classification"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=0.6.3",
    "duckdb>=1.3.1",
    "fastapi[standard]>=0.115.12",
    "lancedb>=0.24.1",
    "openai>=2.0.0",
    "pillow>=11.2.1",
    "polars[pyarrow]>=1.31.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.11.0",
    "requests>=2.32.4",
    "timm>=1.0.15",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers>=4.52.4",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = ["pytest>=8.4.1", "pytest-asyncio>=1.0.0", "ruff>=0.12.0"]
